# simple_cli

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  index.html  page_2.html  print.html  searchindex.js  toc.html  toc.js
.github/workflows/: book.yml
book/: book.toml
book/src/: SUMMARY.md  page_1.md  page_2.md
resources/: INITIAL_SETUP.md  PUBLISHING.md
src/: functions.rs  lib.rs  macros.rs  module.rs
