[package]
name = "simple-cli"
version = "0.1.0"
authors = ["Tamas Kis"]
edition = "2024"
description = "Simple interface for running CLI commands from Rust."
documentation = "https://docs.rs/simple-cli"
repository = "https://github.com/tamaskis/simple_cli"
license = "MIT OR Apache-2.0"

exclude = [".gitignore", ".github/", ".vscode/", "Cargo.lock", "book/"]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "src/docs-header.html" ]

[dependencies]

[dev-dependencies]